--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "bootstrap": "^5.3.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
     "react-icons": "5.5.0",
+    "react-scripts": "^5.0.0",
     "src": "1.1.2"
   },
   "devDependencies": {
